--- a/guestbook02/src/main/webapp/WEB-INF/web.xml
+++ b/guestbook02/src/main/webapp/WEB-INF/web.xml
@@ -9,14 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
   <servlet>
-    <description></description>
-    <display-name>GuestbookController</display-name>
-    <servlet-name>GuestbookController</servlet-name>
-    <servlet-class>com.douzone.guestbook.controller.GuestbookController</servlet-class>
+    <servlet-name>GuestbookServlet</servlet-name>
+    <servlet-class>com.douzone.guestbook.controller.GuestbookServlet</servlet-class>
   </servlet>
+  
   <servlet-mapping>
-    <servlet-name>GuestbookController</servlet-name>
+    <servlet-name>GuestbookServlet</servlet-name>
     <url-pattern>/gb</url-pattern>
   </servlet-mapping>
 </web-app>
