--- a/jstlel/pom.xml
+++ b/jstlel/pom.xml
@@ -16,6 +16,13 @@
 	</properties>
 
 	<dependencies>
+		<!-- JSTL -->
+		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
 		<!-- Servlet -->
 		<dependency>
 		    <groupId>javax.servlet</groupId>
